--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       </div>
 
      <div class="logo-ct">
-       <a href="#"><img src="maehi-photos/IMG_0560のコピー.png" alt="#" class="head-img"></a>
+       <a href="#"><img src="IMG_0560のコピー.png" alt="#" class="head-img"></a>
        <div class="sample2">
          <a href="https://maehioszonline.jimdofree.com/"><p>Online Shop</p></a>
          <a href="#"><p>Events</p></a>
@@ -37,13 +37,13 @@
 
     <main>
       <div class="main-img-ct">
-        <a href=""><img src="maehi-photos/top-imageのコピー.jpg" alt="#" class="main-img"></a>
+        <a href=""><img src="top-imageのコピー.jpg" alt="#" class="main-img"></a>
       </div>
       <h1 class="one-seven-zero">One Seven Zero.</h1>
       <div class="online-ct">
         <div class="online-img-ct">
-          <img src="maehi-photos/online-img.jpg" alt="#" class="online-img-750">
-          <img src="maehi-photos/online-img-1000.jpg" alt="#" class="online-img-1000">
+          <img src="online-img.jpg" alt="#" class="online-img-750">
+          <img src="online-img-1000.jpg" alt="#" class="online-img-1000">
         </div>
         <div class="online-link-ct">
           <a href="https://maehioszonline.jimdofree.com/" class="shop"><p >OSZ Online Shop</p></a>
