--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <input type="checkbox" id="disp-btn">
         <div class="sample1">
           <a href="https://maehioszonline.jimdofree.com/"><h1>Online Shop</h1></a>
-          <a href="#"><h1>Event</h1></a>
+          <a href="https://osz-onesevenzero.github.io/Events/"><h1>Event</h1></a>
           <a href="#"><h1>Contact</h1></a>
         </div>
 
@@ -27,8 +27,8 @@
        <a href="#"><img src="IMG_0560のコピー.png" alt="#" class="head-img"></a>
        <div class="sample2">
          <a href="https://maehioszonline.jimdofree.com/"><p>Online Shop</p></a>
-         <a href="#"><p>Events</p></a>
-         <a href="#"><p>Contact</p></a>
+         <a href="https://osz-onesevenzero.github.io/Events/"><p>Events</p></a>
+         <a href="https://osz-onesevenzero.github.io/Contact/"><p>Contact</p></a>
        </div>
      </div>
 
@@ -37,7 +37,7 @@
 
     <main>
       <div class="main-img-ct">
-        <a href=""><img src="top-imageのコピー.jpg" alt="#" class="main-img"></a>
+        <a href="https://maehioszonline.jimdofree.com/"><img src="top-imageのコピー.jpg" alt="#" class="main-img"></a>
       </div>
       <h1 class="one-seven-zero">One Seven Zero.</h1>
       <div class="online-ct">
@@ -71,7 +71,7 @@
     <hr class="border" size="3px" width="20%" color="black" align="center" >
     <div class="footer-ct">
       <div class="links">
-        <a href="#" class="hov"><p>Contact</p></a><br>
+        <a href="https://osz-onesevenzero.github.io/Contact/" class="hov"><p>Contact</p></a><br>
       </div>
       <div class="credit-ct">
         <p>@ 2021 OSZ</p>
