--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="sample1">
           <a href="https://maehioszonline.jimdofree.com/"><h1>Online Shop</h1></a>
           <a href="https://osz-onesevenzero.github.io/Events/"><h1>Event</h1></a>
-          <a href="#"><h1>Contact</h1></a>
+          <a href="https://osz-onesevenzero.github.io/Contact/"><h1>Contact</h1></a>
         </div>
 
       </div>
